--- a/src/pages/video.astro
+++ b/src/pages/video.astro
@@ -21,7 +21,7 @@ import '../styles/video.css';
 </Layout>
 
 <script>
-const videos = ["/videos/video01.mp4", "/videos/video02.mp4", "/videos/video03.mp4", "/videos/video04.mp4", "/videos/video05.mp4", "/videos/video06.mp4"];
+const videos = ["/videos/video01.mp4", "/videos/video02.mp4", "/videos/video03.mp4", "/videos/video04.mp4", "/videos/video05.mp4"];
 let currentVideoIndex = 0;
 
 const video = document.getElementById('videoBackground') as HTMLVideoElement;
