--- a/src/styles/a-propos.css
+++ b/src/styles/a-propos.css
@@ -1,31 +1,35 @@
+h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    line-height: 1;
+    text-align: center;
+    margin-bottom: 1em;
+    color: black;
+}
 .a-propos-container {
     background-color: black;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 20px;
 }
-
 .a-propos-container p {
     color: #ffffff;
 }
-
 .presentation {
-    width: 95%;
-    margin-inline: 2.5%;
+    width: 100%;
+    margin-top: 50px;
 }
-
 .copywrite {
-    font-size: 10px;
-} 
-
+    font-size: 0.8rem;
+}
 .divider {
     display: flex;
     justify-content: center;
     margin: 40px 0;
 }
-
 .footer {
     position: absolute;
     bottom: 0;
@@ -35,4 +39,28 @@
     width: 95%;
     margin-inline: 2.5%;
     margin-bottom: 12px;
+}
+
+@media only screen and (max-width: 768px) {
+    .presentation {
+        font-size: 0.9rem; 
+    }
+    .footer {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: left;
+        align-items: left; 
+        margin-top: auto; /* Pour placer le footer en bas de la page */
+        padding: 20px 0; /* Ajout de padding pour un meilleur espacement */
+        font-size: 0.9rem; 
+    }
+    .copywrite {
+        margin-top: 12px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .presentation {
+        font-size: 0.8rem; 
+    }
 }
