--- a/src/styles/a-propos.css
+++ b/src/styles/a-propos.css
@@ -1,66 +1,55 @@
-h1 {
-    font-size: 4rem;
-    font-weight: 700;
-    line-height: 1;
-    text-align: center;
-    margin-bottom: 1em;
-    color: black;
-}
-.a-propos-container {
-    background-color: black;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding: 20px;
-}
-.a-propos-container p {
-    color: #ffffff;
-}
-.presentation {
-    width: 100%;
-    margin-top: 50px;
-}
-.copywrite {
-    font-size: 0.8rem;
-}
-.divider {
-    display: flex;
-    justify-content: center;
-    margin: 40px 0;
-}
-.footer {
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 95%;
-    margin-inline: 2.5%;
-    margin-bottom: 12px;
-}
-
-@media only screen and (max-width: 768px) {
-    .presentation {
-        font-size: 0.9rem; 
-    }
-    .footer {
+    .a-propos-container {
+        background-color: black;
+        width: 100%;
+        min-height: 100vh;
         display: flex;
-        flex-direction: column-reverse;
-        justify-content: left;
-        align-items: left; 
-        margin-top: auto; /* Pour placer le footer en bas de la page */
-        padding: 20px 0; /* Ajout de padding pour un meilleur espacement */
-        font-size: 0.9rem; 
+        flex-direction: column;
+        justify-content: center;
+    }
+    .a-propos-container p {
+        color: #ffffff;
+    }
+    .presentation {
+        width: 100%;
+        padding: 0 20px;
     }
     .copywrite {
-        margin-top: 12px;
+        font-size: 0.8rem; /* Réduction de la taille de la police */
     }
-}
+    .divider {
+        display: flex;
+        justify-content: center;
+        margin: 40px 0;
+    }
+    .footer {
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 95%;
+        margin-inline: 2.5%;
+        margin-bottom: 12px;
+    }
 
-@media only screen and (max-width: 480px) {
-    .presentation {
-        font-size: 0.8rem; 
+    /* Media queries pour les écrans plus petits */
+    @media only screen and (max-width: 768px) {
+        .presentation {
+            font-size: 0.9rem; /* Réduction de la taille de la police */
+        }
+        .footer {
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: left;
+            align-items: left; /* Centrer horizontalement les éléments */
+            margin-top: auto; /* Pour placer le footer en bas de la page */
+            padding: 20px 0; /* Ajout de padding pour un meilleur espacement */
+        }
     }
-}
+
+    /* Media queries pour les écrans encore plus petits */
+    @media only screen and (max-width: 480px) {
+        .presentation {
+            font-size: 0.8rem; /* Réduction supplémentaire de la taille de la police */
+        }
+    }
