--- a/src/styles/a-propos.css
+++ b/src/styles/a-propos.css
@@ -22,8 +22,6 @@
         margin: 40px 0;
     }
     .footer {
-        position: absolute;
-        bottom: 0;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -35,6 +33,14 @@
     @media only screen and (max-width: 768px) {
         .presentation {
             font-size: 0.9rem; 
+        }
+        .footer {
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+            width: 95%;
+            margin-inline: 2.5%;
+            margin-bottom: 12px;
         }
     }
 
