fix : page a propos

--- a/src/pages/A-Propos.astro
+++ b/src/pages/A-Propos.astro
@@ -12,11 +12,7 @@ import '../styles/a-propos.css';
             Je me suis engagé dans une trajectoire alimentée par une profonde curiosité.
             <br/>
             <br/>
-            Mon travail transcende la simple création de belles images, il offre une nouvelle lentille à travers laquelle nous percevons à la fois le familier et l'inconnu, cultivant une intimité née d'une véritable intrépidité.
-            <br/>
-            <br/>
-            Je navigue dans les domaines de la photographie, de la direction artistique et de la psychologie du consommateur.
-            Ses intérêts éclectiques couvrent les arts, le design et la culture du monde.
+            Je navigue dans les domaines de la photographie, la réalisation et la direction artistique. Ses intérêts éclectiques couvrent les arts, le design et la culture du monde.
         </p>
         <div class="divider">
             <img src="/icons/divider.svg" alt="">
@@ -24,11 +20,20 @@ import '../styles/a-propos.css';
         <div class="footer">
             <div>
                 <p>2024 HELWANE HAOUI</p>
-                <p class="copywrite">Tout le contenu est protégé par le droit d'auteur de l'artiste. Aucune utilisation commerciale sans autorisation écrite expressément.</p>
+            </div>
+            <div class="">
+                <a href="https://www.instagram.com/helwanehaoui/" target="_blank">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                    </svg>
+                </a>
             </div>
             <div>
                 <p>contact@helwanehaoui.com</p>
             </div>
         </div>
+        <p class="copywrite">Tout le contenu est protégé par le droit d'auteur de l'artiste. Aucune utilisation commerciale sans autorisation écrite expressément.</p>
     </div>
 </Layout>
